[project]
name = "tilesorter"
version = "0.1.0"
description = ""
authors = [
    {name = "JoJoJux aka. J0J0HA",email = "info@jojojux.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
